<resources>
    <string name="app_name">KamBus Vozni Red</string>
    <string name="VstopnaPostaja_input">Vstopna Postaja</string>
    <string name="IzstopnaPostaja_input">Izstopna Postaja</string>
    <string name="Poizvedba_button">Pošlji</string>
    <string name="Zamenjaj_button">Zamenjaj</string>
    <string name="Dan_input">DD</string>
    <string name="Mesec_input">MM</string>
    <string name="Leto_input">LLLL</string>
    <string name="Datum_input">Datum</string>
    <string name="EUR" formatted="true">%s €</string>
    <string name="Puscica">--></string>
    <string name="NiZadetkov">Ni zadetkov</string>
    <string name="Nalagam">Nalagam</string>
    <string name="Cakaj">Nalagam, počakajte trenutek</string>
</resources>